# rustedbytes-sha

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: hasher.rs  main.rs
tests/: integration_tests.rs
