[package]
name = "rustedbytes-sha"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
hex = "0.4"
glob = "0.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
